# faasmjs

./: .gitignore  README.md  app.js  docker-compose.yml  package.json
docs/: poc.md
func/: CMakeLists.txt  chain.cpp  hello.cpp  hellojs.cpp  state.cpp
public/javascripts/: chain.js  faasm.js  hello.js  state.js
public/javascripts/faasm/: faasm.js
public/stylesheets/: style.css
public/wasm/: chain.wasm  chain.wasm.wast  hellojs.wasm  hellojs.wasm.wast  state.wasm
routes/: funcs.js  index.js
scripts/: build_wasm.sh  compile_wasm.sh  nginx.conf  run_faasm.sh  toolchain.sh  upload.sh  wast.sh
views/: chain.pug  hello.pug  index.pug  state.pug
